--- a/jshow-web-admin/src/main/webapp/WEB-INF/vm/user/testUser/update.vm
+++ b/jshow-web-admin/src/main/webapp/WEB-INF/vm/user/testUser/update.vm
@@ -1,3 +1,5 @@
+#set($layout='/WEB-INF/vm/layout/adminLayout.vm')
+
 
 	
 	<script type="text/javascript">
@@ -15,8 +17,9 @@
 	
 	
 
+
     
-<div class="modal-body auto-height-body"  id="update_testuser">
+<div class="modal-body " id="update_testuser">
 	<form class="form-horizontal"  id="form1" role="form">
 	
 		<div class="form-group">
@@ -57,7 +60,7 @@
 			<label class="col-sm-2 control-label" for="enname">介绍</label>
 			<div class="col-sm-7 controls">
 			
-				<textarea class="form-control j_editor"   name="introduce" id="introduce"  placeholder="请输入介绍"  style="min-height:250px;width:100%;">$!{testUser.introduce}</textarea>
+				<textarea class="form-control j_editor"   name="introduce" id="introduce"  placeholder="请输入介绍"  style="min-height:250px;">$!{testUser.introduce}</textarea>
 				
 			</div>
 		</div>
@@ -66,7 +69,7 @@
 			<label class="col-sm-2 control-label" for="enname">备注</label>
 			<div class="col-sm-7 controls">
 			
-				   <textarea class="form-control"   name="remark" id="remark" placeholder="请输入备注"  rows="5">$!{testUser.remark}</textarea> 
+			<input type="text" class="form-control"  name="remark" id="remark" placeholder="请输入备注" maxlength="45" value="$!{testUser.remark}"/>
 			</div>
 		</div>
 		
@@ -90,11 +93,17 @@
 </div>
 <div class="modal-footer">
 	<a href="javascript:;" class="btn btn-primary" id="btn_submit">保存修改</a>
-	<a href="javascript:;" class="btn btn-default"  data-dismiss="modal" aria-hidden="true">关闭</a>
+	<a href="javascript:;" class="btn btn-sm" onclick="backToManage();">返回</a>
 </div>
 
 
 <script language="javascript">
+
+
+	var pageFrom='$!{request.getParameter('from')}';
+	var menuId='$!{request.getParameter('menuId')}';
+
+
 void function(j) {
 	var set = {
 		 		id:  {must: true, maxlength:10, ftip:'id,最多10个字符' ,handler:'int' },
@@ -114,11 +123,18 @@ void function(j) {
 			'/user/testUser/doUpdate.action', 
 			function() {
 				gDialog.fClose();
-				queryList(1);
+				backToManage();
 			}
 		);
 	});
-	
+
+
 	//form.friend.init(set);
 }(jQuery);
+
+
+	function backToManage(){
+    		var url='/user/testUser/manage.action';
+    		window.location=url+"?from="+pageFrom+"&menuId="+menuId;
+    };
 </script>
