--- a/jshow-web-admin/src/main/webapp/WEB-INF/vm/common/cssStatics.vm
+++ b/jshow-web-admin/src/main/webapp/WEB-INF/vm/common/cssStatics.vm
@@ -6,7 +6,7 @@
 <!--[if IE 7]>
   <link rel="stylesheet" href="/misc/aceadmin/css/font-awesome-ie7.min.css" />
 <![endif]-->
-
+<link rel="stylesheet" href="/misc/css/font-awesome.min.css" />
 
 <!-- ace styles -->
 
